[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bert-demo"
version = "0.1.0"
description = "NVIDIA NGC BERT Base Uncased Podman Tutorial"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # torch is provided by the NGC container at runtime; omit it here to avoid
    # overwriting the CUDA-optimised wheel already present in the container.
    "transformers>=5.3.0",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra local
# Pulls a CPU-only torch so the scripts are runnable outside the NGC container.
local = [
    "torch>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bert_demo"]

[tool.uv]
# Keep the lock file consistent whether or not the optional 'local' extra is active.
# Inside the NGC container uv sync is always run without --extra local.
default-groups = []
